--- a/css/stryle.css
+++ b/css/stryle.css
@@ -44,7 +44,7 @@ body {
 }
 .section-image {
   height: 100%;
-  background-image: url("/assets/upper.jpg");
+  background-image: url("../assets/upper.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
